@@ -2,6 +2,10 @@
 
 	* DESCRIPTION (Version, Date): Roll minor release
 
+	* src/calendars.cpp: Add getBusinessDayList
+	* R/calendars.R: Add businessDayList
+	* NAMESPACE: Export both
+
 2021-11-02  Dirk Eddelbuettel  <edd@debian.org>
 
 	* R/calendars.R: Add calendars vector
